# knowledge-base-cpp

./: .gitignore  .tool-versions  LICENSE.md  README.md
build_tools/android_build_examples/: README.md
build_tools/cmake/stage3/: CMakeLists.txt
build_tools/cmake_examples/: README.md
build_tools/cmake_examples/stage2/: CMakeLists.txt  README.md
build_tools/cmake_examples/stage2/main/: CMakeLists.txt
build_tools/cmake_examples/stage5/: CMakeLists.txt  README.md
build_tools/cmake_examples/stage5/lib/: CMakeLists.txt
build_tools/cmake_examples/stage5/lib/src/: CMakeLists.txt
build_tools/cmake_examples/stage5/main/: CMakeLists.txt
build_tools/cmake_examples/stage5/main/src/: CMakeLists.txt
build_tools/cmake_official_tutorial/: README.md
build_tools/cmake_separate_src_inc_sample/: CMakeLists.txt
build_tools/cmake_separate_src_inc_sample/inc/: entity.h
build_tools/cmake_separate_src_inc_sample/src/: CMakeLists.txt  main.cpp
build_tools/meson_examples/: README.md
c++0x/000_hello_world/: hello_world.cpp
c++0x/001_compile_and_run/: README.md
c++0x/002_preprocess/: README.md  hello_world.cpp  hello_world.i  hello_world.ii
c++0x/003_compile/: README.md  hello_world.s
c++0x/004_assemble/: README.md  hello_world.cpp
c++0x/005_link/: README.md  a.out
c++0x/006_execute/: README.md
c++0x/007_variables_and_types/: README.md
c++0x/008_functions/: hello_world.cpp
c++0x/009_header_files/: hello_world.cpp
c++0x/crtp/: crtp_implementation.cpp  legacy_implementation.cpp
c++0x/function_pointer/: main.cpp
c++0x/operator_overload/: main.cc
c/000_hello_world/: hello_world.c
c/register_callback/: main.c  server.c  server.h
codestyle/: README.md
concurrency/: hello_world_concurrent.cc
concurrency/atomic_flag/: spin_lock.cpp  spin_lock_acquire_release.cc
concurrency/call_once/: call_once.cpp
concurrency/condition_variable/: condition_variable.cc
concurrency/dead_lock/: dead_lock.cc  resolve_by_unique_lock_adopt.cc  resolve_by_unique_lock_defer.cc
concurrency/lock_guard/: legacy_lock.cc  lock_guard_raii.cpp
concurrency/packaged_task/: packaged_task.cc  packaged_task_reuse.cc
concurrency/promise_and_future/: promise_future.cc  promise_future_sync.cc  promise_shared_future.cc
concurrency/shared_lock/: reader_writer_lock.cpp
concurrency/std_async/: main.cc
concurrency/thread_guard/: issue_code.cc  thread_guard_raii.cc
concurrency/thread_local/: main.cc
concurrency/thread_safe_singleton/: singleton_by_scott_meyers.cpp  singleton_using_call_once.cpp
concurrency/thread_sanitizer/: data_race.cc
design_patterns/command_pattern/: main.cpp
design_patterns/monad_pattern/: maybe_monad.cpp
design_patterns/visitor_pattern/: draw_visitor_pattern.cpp
elf/simple_dynamic_linking/: program1.c  program2.c
framework/plugin_framework/: CMakeLists.txt
framework/plugin_framework/main/: CMakeLists.txt
framework/plugin_framework/main/lib/: hello_module.cpp
framework/plugin_framework/main/src/: main.cpp
llvm/01_introduction_to_llvmir_and_tools/: README.md  test  test-2.ll  test.bc  test.ll
llvm/02_llvm_program_structure_module/: README.md  eva-llvm
llvm/03_basic_numbers_main_function/: compile-run.sh  eva-llvm  eva-llvm.cpp
llvm/04_strings_printf_operator/: eva-llvm  out.ll
llvm/05_parsing_sexpression_to_ast/: README.md  eva-llvm  eva-llvm.cpp
llvm/06_symbols_global_variables/: eva-llvm  eva-llvm.cpp  out.ll
llvm/07_block_environments/: eva-llvm  eva-llvm.cpp  out.ll
llvm/08_local_variables_stack_allocation/: compile-run.sh  eva-llvm  eva-llvm.cpp  out.ll
llvm/09_binary_expressions_comparison_operators/: eva-llvm  eva-llvm.cpp  out.ll
llvm/10_control_flow_if_expression_while_loops/: eva-llvm  eva-llvm.cpp  out.ll
llvm/11_function_declarations_call_expression/: README.md  eva-llvm  eva-llvm.cpp  out.ll
llvm/12_compiling_classes/: eva-llvm  eva-llvm.cpp  out.ll
llvm/13_instance_heap_allocation/: compile-run.sh  eva-llvm  eva-llvm.cpp  out  out.ll
llvm/14_property_access/: README.md  compile-run.sh  eva-llvm  eva-llvm.cpp  out  out.ll
llvm/15_class_inheritance_vtable/: eva-llvm  eva-llvm.cpp  out  out.ll
llvm/16_class_inheritance_method_application/: eva-llvm  eva-llvm.cpp  out  out.ll
llvm/17_functor_callable_objects/: eva-llvm  eva-llvm.cpp  out  out.ll
modern_c++/lambda/: inherit_from_lambda.cpp
modern_c++/rvalue_reference/: README.md  main_rvalue.cc  main_without_rvalue.cc
modern_c++/std_function_std_bind/: main.cc  main.cpp
modern_c++/std_invoke/: class_function_invoke.cc  main.cpp  nonclass_function_invoke.cpp
modern_c++_template/advanced/: CMakeLists.txt  LICENSE  compile_run.sh  conanfile.txt
modern_c++_template/beginner/: CMakeLists.txt  README.md  compile_run.sh  conanfile.txt
modern_c++_template/beginner/lib/: CMakeLists.txt
modern_c++_template/beginner/lib/inc/: mymath.h
modern_c++_template/beginner/lib/src/: mymath.cpp
modern_c++_template/beginner/lib/test/: test_math.cpp
modern_c++_template/beginner/main/: CMakeLists.txt
modern_c++_template/beginner/main/src/: main.cpp
modern_c++_template/conan/: README.md  compile_run.sh  conan_dependencies.cmake
modern_c++_template/conan_with_optional_dependency/: CMakeLists.txt  conanfile.txt
modern_c++_template/optional_dependency/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  conanfile.txt
os_specific/linux/plugin_framework/: .clang-tidy  CMakeLists.txt
os_specific/linux/plugin_framework/.plantuml/: class.pu
os_specific/linux/plugin_framework/loadable/: CMakeLists.txt
os_specific/linux/plugin_framework/loadable/inc/: LoadableFile.h
os_specific/linux/plugin_framework/loadable/src/: PluginManager.cpp  linux.cpp
package_manager/conan/cmake/: CMakeLists.txt  conanfile.txt
package_manager/vcpkg/cmake/: CMakeLists.txt  README.md  vcpkg.json
package_manager/vcpkg/cmake/src/: CMakeLists.txt  main.cpp
template/concepts/: concept.cpp
uncategorized/cmake_src_inc/: CMakeLists.txt
uncategorized/cmake_src_inc/src/: CMakeLists.txt  entity.cc
(+147 files in other folders)
